SWATCH-121 Schedule and process nightly tallies by org_id instead of account